# ICL

./: README.md  pyproject.toml
notebooks/: MOCK.ipynb
src/: eval.py  loss.py  model_train.py  model_trainer.py  run_mlp_experiment.py  run_transformer_experiment.py
src/datasets/: dataset.py  task_generation.py  task_generator.py
src/models/: MLP.py  Transformer.py
