[tool.poetry]
name = "gpicl"
version = "0.1.0"
description = ""
authors = ["nickolay <hohlovkola@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
torch = "^2.1.2"
torchvision = "^0.16.2"
scikit-learn = "^1.3.2"
wandb = "^0.16.2"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
